# jax-ext

./: .pre-commit-config.yaml  README.md  pyproject.toml
jax_ext/: __init__.py
jax_ext/coordinates/: __init__.py  galactocentric.py
jax_ext/integrate/: __init__.py  simpson.py
jax_ext/integrate/tests/: test_simpson.py
